--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=11000
 
 #MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.136.135:3306/SeeSayDB
+spring.datasource.url=jdbc:mariadb://192.168.175.128:3306/myDB
 spring.datasource.username=web_user
 spring.datasource.password=1234
 
